Correcciones en footer

--- a/src/app/pages/shared/footer/footer.component.css
+++ b/src/app/pages/shared/footer/footer.component.css
@@ -4,7 +4,7 @@
 
 .footer {
     z-index: 150;
-    background: #000000;
+    background: #0000009d;
     line-height: 100%;
     width: 100%;
     padding: 40px 0px;
