--- a/src/app/pages/shared/footer/footer.component.html
+++ b/src/app/pages/shared/footer/footer.component.html
@@ -1,7 +1,9 @@
+<br>
 <div class="espacio"></div>
 <div class="footer">
     <div class="container">
-        <p>{{date}}</p>
+        <p>{{date}} - Daniel Mardones</p>
+        <p>Las imagenes para las miniaturas de cada episodio se obtuvieron desde </p><a href="https://www.adultswim.com/videos/rick-and-morty">https://www.adultswim.com/videos/rick-and-morty</a>
     </div>
 </div>
 
