--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <p>
     <mat-toolbar color="primary">
-      <h1 class="title-center" (click)="browse('')" >RICK & MORTIS WIKI</h1>
+      <h1 class="title-center" (click)="browse('')" >RICK & MORTY WIKI</h1>
     </mat-toolbar> 
 
     <mat-toolbar color="secondary">
